testsuite/lab2-testsuite/good/double__postincrement.cc
int main() {
  let double j = 22.5;
  let double k = 23.5;
  j++;
  printDouble(j);
  printDouble(k++);
  return 0;
}
