testsuite/lab2-testsuite/bad/ass_int_double.cc
// Assigning double to int variable.

int main () {
 let int x = 1.0;
 return 0 ;
}